--- a/jwt-jaas/pom.xml
+++ b/jwt-jaas/pom.xml
@@ -72,6 +72,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.wildfly.core</groupId>
+      <artifactId>wildfly-server</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>com.auth0</groupId>
       <artifactId>java-jwt</artifactId>
     </dependency>
