--- a/jwt-api/pom.xml
+++ b/jwt-api/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.soulwing.jwt</groupId>
-    <artifactId>wildfly-jwt-module</artifactId>
+    <artifactId>wildfly-jwt-extension</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
   <artifactId>jwt-api</artifactId>
