--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
     <version>11</version>
   </parent>
   <groupId>org.soulwing.jwt</groupId>
-  <artifactId>wildfly-jwt-module</artifactId>
+  <artifactId>wildfly-jwt-extension</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>Wildfly JWT Module</name>
+  <name>Wildfly JWT Extension</name>
   <description>
-    A JAAS module for Wildfly that supports JWT authentication.
+    A extension for Wildfly that supports JWT authentication.
   </description>
   <properties>
     <java.version>1.8</java.version>
@@ -20,7 +20,6 @@
     <version.org.wildfly.core>4.0.0.Final</version.org.wildfly.core>
     <version.io.undertow>2.0.0.Final</version.io.undertow>
     <version.com.auth0>3.7.0</version.com.auth0>
-    <module.name>cas</module.name>
   </properties>
   <scm>
     <connection>scm:git:git@github.com:soulwing/${project.artifactId}.git</connection>
@@ -83,7 +82,8 @@
   </repositories>
   <modules>
     <module>jwt-api</module>
-    <module>jwt-jaas</module>
+    <module>jwt-auth0</module>
+    <module>jwt-subsystem</module>
     <module>jwt-modules</module>
   </modules>
 </project>
