add missing message bundle property

--- a/jwt-subsystem/src/main/resources/org/soulwing/jwt/extension/model/LocalDescriptions.properties
+++ b/jwt-subsystem/src/main/resources/org/soulwing/jwt/extension/model/LocalDescriptions.properties
@@ -11,6 +11,7 @@ jwt.secret.properties=Configuration properties for the provider
 jwt.secret-key=Provides a secret key for symmetric cryptographic operations
 jwt.secret-key.add=Adds a secret key
 jwt.secret-key.remove=Removes a secret key
+jwt.secret-key.id=Key identifier to match for this secret key
 jwt.secret-key.type=JCA key type name (e.g. `AES`)
 jwt.secret-key.length=Length of key in bits (128, 192, 256, 384, 512)
 jwt.secret-key.provider=Name of the provider
