--- a/jwt-subsystem/pom.xml
+++ b/jwt-subsystem/pom.xml
@@ -121,6 +121,10 @@
       <optional>true</optional>
     </dependency>
     <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.json</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.soulwing.jwt</groupId>
       <artifactId>jwt-api</artifactId>
     </dependency>
