--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,11 @@
         <version>${version.io.undertow}</version>
       </dependency>
       <dependency>
+        <groupId>org.glassfish</groupId>
+        <artifactId>javax.json</artifactId>
+        <version>1.1.2</version>
+      </dependency>
+      <dependency>
         <groupId>org.soulwing.jwt</groupId>
         <artifactId>jwt-api</artifactId>
         <version>${version.org.soulwing.jwt}</version>
