--- a/jwt-provider/pom.xml
+++ b/jwt-provider/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.soulwing.jwt</groupId>
     <artifactId>wildfly-jwt-extension</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
