--- a/jwt-webapp-demo/pom.xml
+++ b/jwt-webapp-demo/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>wildfly-jwt-extension</artifactId>
     <groupId>org.soulwing.jwt</groupId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.0.1</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -86,10 +86,9 @@
                 </goals>
                 <configuration>
                   <target name="copy-build-artifacts">
-                    <copy file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
-                        tofile="${docker.staging.directory}/${project.artifactId}.${project.packaging}"/>
+                    <copy file="${project.build.directory}/${project.build.finalName}.${project.packaging}" tofile="${docker.staging.directory}/${project.artifactId}.${project.packaging}" />
                     <copy todir="${docker.staging.directory}">
-                      <fileset dir="${project.basedir}/../jwt-modules/target/jwt-modules-${project.version}-modules"/>
+                      <fileset dir="${project.basedir}/../jwt-modules/target/jwt-modules-${project.version}-modules" />
                     </copy>
                   </target>
                 </configuration>
