--- a/jwt-subsystem/pom.xml
+++ b/jwt-subsystem/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.soulwing.jwt</groupId>
     <artifactId>wildfly-jwt-extension</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
   </parent>
   <artifactId>jwt-subsystem</artifactId>
   <name>Wildfly JWT Subsystem</name>
