--- a/jwt-key-storage/pom.xml
+++ b/jwt-key-storage/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.soulwing.jwt</groupId>
     <artifactId>wildfly-jwt-extension</artifactId>
-    <version>1.2.0</version>
+    <version>1.3.0-SNAPSHOT</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
