--- a/jwt-extension-api/pom.xml
+++ b/jwt-extension-api/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>org.soulwing.jwt</groupId>
     <artifactId>wildfly-jwt-extension</artifactId>
-    <version>1.2.1</version>
+    <version>1.3.0-SNAPSHOT</version>
   </parent>
   <artifactId>jwt-extension-api</artifactId>
   <name>Wildfly JWT Module API</name>
