--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   </parent>
   <groupId>org.soulwing.jwt</groupId>
   <artifactId>wildfly-jwt-extension</artifactId>
-  <version>1.3.0-SNAPSHOT</version>
+  <version>1.2.2</version>
   <packaging>pom</packaging>
   <name>Wildfly JWT Extension</name>
   <description>
@@ -18,7 +18,7 @@
     <connection>scm:git:git@github.com:soulwing/${project.artifactId}.git</connection>
     <developerConnection>${project.scm.connection}</developerConnection>
     <url>https://github.com/soulwing/${project.artifactId}</url>
-    <tag>2.0.2</tag>
+    <tag>1.2.2</tag>
   </scm>
   <dependencyManagement>
     <dependencies>
